# magic_builder

./: .clang-format  CMakeLists.txt  Makefile  README.md  magic_builder.hpp  main.cpp  test.cpp
include/: constexpr_map.hpp  magic_builder.hpp
include/example/: commit_builder.hpp  commit_builder_actionimpls.hpp
include/magic_builder/: magic_builder.hpp
